# py-mcp-server

./: .flake8  .gitignore  ASSISTANT_README.md  BOTS_README.md  README.rst  codecov.yml  mypy.ini  pytest.ini  setup.cfg  setup.py
.github/workflows/: python-tests.yml
snake/: __init__.py
snake/mcp/: __init__.py
snake/mcp/server/: __init__.py  __main__.py  server.py
snake/mcp/server/tools/: base.py  base.py.test  coverage.py  flake8.py  mypy.py  mypy.py.test  pytest.py
snake/mcp/server/util/: coverage.py
tests/: __init__.py  conftest.py  test_basic.py  test_direct.py  test_main.py  test_server.py  test_server_common.py  test_server_flake8.py  test_server_mypy.py  test_server_pytest.py  test_tools_base.py  test_tools_flake8.py  test_tools_mypy.py  test_tools_pytest.py  test_util_coverage.py
