[metadata]
name = snake.mcp.server
version = file: VERSION
author = Ryan Northey
author_email = ryan@synca.io
maintainer = Ryan Northey
maintainer_email = ryan@synca.io
license = GPL 3
url = https://github.com/synca/snake-mcp-server
description = "Lib for testing packages with distributions in Envoy proxy's CI"
long_description = file: README.rst
classifiers =
    Development Status :: 4 - Beta
    Framework :: Pytest
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
python_requires = >=3.12
packages = find_namespace:
install_requires =
    flake8
    mcp[cli]
    mypy
    pytest
    pytest-asyncio
    pytest-cov
    types-setuptools

[options.extras_require]
test =
    pytest
    pytest-asyncio
    pytest-coverage
lint = flake8
types = mypy

[options.package_data]
* = py.typed

[options.packages.find]
include = snake.*
exclude =
    build.*
    tests.*
    dist.*
